ingress/sentry_web_ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: sentry-ext
  namespace: wsp-sentry
  labels:
    traffic-type: traefik-ext
  annotations:
    traefik.frontend.rule.type: PathPrefix
    traefik.ingress.kubernetes.io/router.middlewares: wsp-sentry-redirect@kubernetescrd
spec:
  tls:
    - hosts:
        - sentry-prod.web.s8.ru
  rules:
    - host: sentry-prod.web.s8.ru
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              serviceName: sentry-nginx-svc
              servicePort: 80
status:
  loadBalancer: {}

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: wsp-sentry
spec:
  redirectScheme:
    scheme: https
    permanent: true
